# clang-unformat-ng

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  pyproject.toml
docs/: format-style-dump.py  notes.md
include/clang-unformat-ng/: clang-unformat-ng.hpp  common.hpp  core.hpp  fmt.hpp  json.hpp  llvm-stubs.hpp  rpc.hpp  style.hpp  utils.hpp
lib/: CMakeLists.txt
lib/clang-unformat-ng/: CMakeLists.txt  config.hpp.in  core.cpp  fmt.cpp  json.cpp  llvm-stubs.cpp  rpc.cpp  style.cpp  utils.cpp
lib/clang-unformat-ng/python/: CMakeLists.txt  cxx_py.cpp  cxx_py_ffi.cpp  python.cpp
python/src/: styleopts.py
python/src/clang_unformat_ng/: rpc.py  styleopts.py  styleopts_data.py  styleopts_template.py  styleopts_types.py  utils.py
python/src/clang_unformat_ng/styleopts/: __init__.py  data.py  template.py  types.py
python/src/clang_unformat_ng/styleopts/templates/: bool.tcpp  enum.tcpp  option.tcpp  refl.tcpp  rfl.tcpp
python/src/clang_unformat_ng/tools/: unformat_util.py
python/tests/: test_style.py  test_style_templates.py
scripts/: dump_format_style.py  dump_unformat_style.py
scripts/clang/: formatstyle.py  styleopts.py  styleopts_data.py  styleopts_types.py
tools/clang-unformat-ng/: CMakeLists.txt  unformat.cpp
